[project]
name = "comfyui_cash"
description = "DeployCash, a tool that converts workflows into WeChat and H5 with one click, and supports payments."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["websockets", "aiohttp"]

[project.urls]
Repository = "https://github.com/jacklukai/ComfyUI_DeployCash"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "jacklukai"
DisplayName = "ComfyUI_Cash"
Icon = ""

# key = "6df3a0cb-639f-4dfe-b509-1ea61850b572"